# automation_indra_avitech

./: Makefile  README.md  conftest.py  pyproject.toml
environment/: test.yaml
features/gmail_functionality/: email_scenarios.feature
resources/gmail_functionality/: attachment.txt
src/services/: gmail.py
src/tests/: test_email_scenarios.py
src/utils/: environment.py
